Flickering Fix + UX Changes

--- a/src/app/end-user/end-user.component.scss
+++ b/src/app/end-user/end-user.component.scss
@@ -125,6 +125,7 @@
         z-index: 9;
         width: 100%;
         height: 100%;
+        min-height: 100vh;
         display: none;
     }
 }
